--- a/ZyROSConnector/CMakeLists.txt
+++ b/ZyROSConnector/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 2.8.12)
 project(ZyROSConnector)
 
-set(TRU_ROSCONNECTOR_MAJOR_VERSION 0)
-set(TRU_ROSCONNECTOR_MINOR_VERSION 2)
-set(TRU_ROSCONNECTOR_VERSION ${TRU_ROSCONNECTOR_MAJOR_VERSION}.${TRU_ROSCONNECTOR_MINOR_VERSION})
+set(ZY_ROSCONNECTOR_MAJOR_VERSION 0)
+set(ZY_ROSCONNECTOR_MINOR_VERSION 2)
+set(ZY_ROSCONNECTOR_VERSION ${ZY_ROSCONNECTOR_MAJOR_VERSION}.${ZY_ROSCONNECTOR_MINOR_VERSION})
 
 set(HEADER_FILES
         init_ZyROSConnector.h
@@ -27,6 +27,42 @@ set(SOURCE_FILES
     ZyROSConnectorTopicSubscriber.cpp
     ZyROSConnectorWorkerThread.cpp
 )
+
+# Build list of available ROS message types
+SET(ROS_DISTRO "$ENV{ROS_DISTRO}")
+if ("${ROS_DISTRO}" STREQUAL "")
+    SET(ROS_DISTRO "melodic")
+endif()
+
+SET(ROS_INSTALL_PREFIX "$ENV{ROS_ROOT}")
+if ("${ROS_INSTALL_PREFIX}" STREQUAL "")
+    SET(ROS_INSTALL_PREFIX "/opt/ros/melodic")
+endif()
+
+message(STATUS "Generating ROS message and service type header files.")
+if (ZY_ROS_CONNECTOR_GENERATE_FACTORY_METHODS)
+    message(STATUS "Adding define switch for ZY_ROS_CONNECTOR_GENERATE_FACTORY_METHODS")
+    add_definitions(-DZY_ROS_CONNECTOR_GENERATE_FACTORY_METHODS)
+else()
+    message(STATUS "NOT ADDING define switch for ZY_ROS_CONNECTOR_GENERATE_FACTORY_METHODS")
+endif()
+
+message(STATUS "Calling list_ros_message_types.sh with arguments: \"${ZY_ROS_CONNECTOR_GENERATE_FACTORY_METHODS}\" \"${CMAKE_CURRENT_BINARY_DIR}\" \"${ROS_INSTALL_PREFIX}\" \"${ROS_DISTRO}\"")
+
+execute_process(COMMAND "${CMAKE_CURRENT_SOURCE_DIR}/list_ros_message_types.sh" "${ZY_ROS_CONNECTOR_GENERATE_FACTORY_METHODS}" "${CMAKE_CURRENT_BINARY_DIR}" "${ROS_INSTALL_PREFIX}" "${ROS_DISTRO}" OUTPUT_VARIABLE ROS_MSG_TYPES OUTPUT_STRIP_TRAILING_WHITESPACE)
+
+# TODO: Get rid of the extra "ZyROSConnector" subdirectory in paths for ther auto-generated source files.
+list(APPEND HEADER_FILES
+    ${CMAKE_BINARY_DIR}/applications/plugins/ZyROSConnector/ZyROSConnector/ZyROS_MessageType_Instantiations_Subscribers.h
+    ${CMAKE_BINARY_DIR}/applications/plugins/ZyROSConnector/ZyROSConnector/ZyROS_MessageType_Instantiations_Publishers.h
+    ${CMAKE_BINARY_DIR}/applications/plugins/ZyROSConnector/ZyROSConnector/ZyROS_ServiceType_Client_Instantiations.h)
+
+list(APPEND SOURCE_FILES
+    ${CMAKE_BINARY_DIR}/applications/plugins/ZyROSConnector/ZyROSConnector/ZyROSConnectorTopicSubscriber.cpp
+    ${CMAKE_BINARY_DIR}/applications/plugins/ZyROSConnector/ZyROSConnector/ZyROSConnectorTopicPublisher.cpp
+    ${CMAKE_BINARY_DIR}/applications/plugins/ZyROSConnector/ZyROSConnector/ZyROSConnectorServiceClient.cpp
+    ${CMAKE_BINARY_DIR}/applications/plugins/ZyROSConnector/ZyROSConnector/ZyROSConnectorServiceServer.cpp
+    )
 
 find_package(ROS QUIET REQUIRED)
 message(STATUS "ROS found: ${ROS_FOUND}")
@@ -73,4 +109,4 @@ target_link_libraries(${PROJECT_NAME} ${LOG4CXX_LIBRARIES})
 set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER "Plugins")
 set_target_properties(${PROJECT_NAME} PROPERTIES DEBUG_POSTFIX "_d")
 
-sofa_create_package(${PROJECT_NAME} "0.0.1" ${PROJECT_NAME} ${PROJECT_NAME})
+sofa_create_package(${PROJECT_NAME} ${ZY_ROSCONNECTOR_VERSION} ${PROJECT_NAME} ${PROJECT_NAME})
